[package]
name = "htesterp"
version = "0.1.1"
description = "Tool to check if HTTP or HTTPS are available for hosts"
authors = ["Eloy Perez <zer1t0ps@protonmail.com>"]
edition = "2018"
license = "GPL-3.0"
repository = "https://gitlab.com/Zer1t0/htesterp"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
reqwest = "0.10"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"
log = "0.4"
stderrlog = "0.4"
